--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .Footer{
-        background-color: #111111;
-        color:#00D4AD;
+        background-color: var(--backgroundAll);
+        color:var(--Colorbackground);
         font-size: 1.5em;
         font-weight: bold;
 }
