--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -11,7 +11,7 @@ header{
 }
 header .logo{
         font-size: 2em;
-        color: #fff;
+        color: var(--ColorLogo);
         font-weight: 700;
         text-decoration: none;
         transition: 0.5s;
@@ -145,12 +145,16 @@ header .logo{
 }
 .content .contentBx p
 {
-        color: #4CD5AE;
+        color: var(--Colorbackground);
         font-size: 1.2rem;
         text-align: right;
 }
 .content .imgBx{
         margin: 0% 8%;
+}
+.content .imgBx img{
+        width: 100%;
+        height: 100%;
 }
 .sci{
         position: absolute;
@@ -206,8 +210,15 @@ header .logo{
 }
 .collection img{
         width: 100%;
+        height: 100%;
 }
 /* ALL RESPONCEV */
+@media screen and (max-width: 1300px){
+        .content .contentBx
+        {
+                max-width: 400px;
+        }
+}
 @media screen and (max-width: 1000px){
         .content .contentBx
         {
@@ -215,12 +226,12 @@ header .logo{
         }
         .content .contentBx p
         {
-                color: #4CD5AE;
                 font-size: 1rem;
                 text-align: center;
         } 
         .content .imgBx img{
-                height: 70vh;
+                width: 100%;
+                height: 50%;
         }
         .content{
                 display: flex;
@@ -233,29 +244,38 @@ header .logo{
 @media screen and (max-width: 576px){
         .content .contentBx p
         {
-                color: #4CD5AE;
                 font-size: 1rem;
                 text-align: center;
         } 
         .content .imgBx img{
-                height: 70vh;
+                width: 100%;
+                height: 50%;
         }
         .sci li a img{
-                height: 5vh;
+                height: 50px;
                 width: 50px;
+        }
+        .banner{
+                padding: 0 40px;
         }
 }
 @media screen and (max-width: 425px){
         .content .contentBx p
         {
-                font-size: 0.7rem;
+                font-size: 0.6rem;
         } 
         .content .imgBx img{
-                height: 60vh;
+                width: 100%;
+                height: 100%;
+        }
+        .banner{
+                padding: 0 30px;
+        }
+        .content{
+                top: 0pc;
         }
         header .logo {
                 font-size: 1.2em;
-                color: #fff;
                 font-weight: 600;
                 text-decoration: none;
                 transition: 0.5s;
@@ -272,7 +292,6 @@ header .logo{
                 padding: 17px 19px;
         }
         .menu li a{
-                color: #fff;
                 text-decoration: none;
                 font-size: 1.5em;
         }
