--- a/src/components/Left/NewSection/Swiper.css
+++ b/src/components/Left/NewSection/Swiper.css
@@ -4,8 +4,12 @@
         text-align: center;
         margin-top: 2%;
 }
+.SmallSliderShow2 img{
+        width: 40%;
+        height: 100%;
+}
 .swiper-pagination-bullet-active {
-        background-color: #04EEC8 !important;
+        background-color: var(--Colorbackground) !important;
 }
 .BigSliderShow {
         width: 100%;
@@ -18,6 +22,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background: #20242C;
 }
 
 .BigSliderShow2 img {
@@ -28,13 +33,14 @@
 .BigSliderShow2 .title {
         font-size: 41px;
         font-weight: 300;
-        color: #04EEC8;
+        color: var(--Colorbackground);
         border: 2px solid #111111;
         background-color: #111111d8;
         width: 100%;
 }
 .BigSliderShow2 .title img {
-        height: 80vh;
+        width: 100%;
+        height: 100%;
         background-size: cover;
 }
 
@@ -45,10 +51,10 @@
 @media screen and (max-width: 991px){
         .BigSliderShow {
                 width: auto;
-                height: 12%;
+                height: 14%;
         }
         .BigSliderShow2 .title img {
-                height: 40vh;
+                height: 100%;
                 width: 100%;
                 background-size: cover;
         }
@@ -57,13 +63,19 @@
                 font-weight: 300;
         }
 }
+@media screen and (max-width: 728px){
+        .BigSliderShow {
+                width: auto;
+                height: 11%;
+        }
+}
 @media screen and (max-width: 576px){
         .BigSliderShow {
                 width: 100%;
-                height: 10%;
+                height: 11%;
         }
         .BigSliderShow2 .title img {
-                height: 28vh;
+                height: 100%;
                 width: 100%;
                 background-size: cover;
         }
@@ -72,17 +84,17 @@
                 font-weight: 300;
         }
         .SmallSliderShow2 img {
-                width: 70%;
-                height: 30vh;
+                width: 50%;
+                height: 100%;
         }
 }
 @media screen and (max-width: 450px){
         .BigSliderShow {
                 width: 100%;
-                height: 9%;
+                height: 10%;
         }
         .BigSliderShow2 .title img {
-                height: 28vh;
+                height: 100%;
                 width: 100%;
                 background-size: cover;
         }
