--- a/src/styles/Film.css
+++ b/src/styles/Film.css
@@ -1,14 +1,14 @@
 /* c */
 .TitleSub{
         text-align: center;
-        background: #02e4cd;
+        background: var(--backgroundPartTitleSub);
         width: auto;
         padding: 1.5% 0;
 }
 .TitleSub span{
         font-weight:bold;
         font-size: 1.3em;
-        color: black;
+        color: var(--ColorPartTitleSubSPAN);
 }
 .TitleSub a{
         text-decoration: none;
@@ -23,7 +23,7 @@
         font-size: 22px;
         font-weight: 900;
         text-align: center;
-        color: #02e4cd;
+        color: var(--Colorbackground);
 }
 
 .search__input {
@@ -33,20 +33,20 @@
         transition: transform 250ms ease-in-out;
         font-size: 14px;
         line-height: 18px;
-        color: #02e4cd;
+        color: var(--Colorbackground);
         background-color: transparent;
         background-repeat: no-repeat;
         background-size: 18px 18px;
         background-position: 95% center;
         border-radius: 50px;
-        border: 1px solid #02e4cd;
+        border: 1px solid var(--ColorPartBorder);
         transition: all 250ms ease-in-out;
         backface-visibility: hidden;
         transform-style: preserve-3d;
 }
 
 .search__input::placeholder {
-        color: #02e4cd;
+        color: var(--Colorbackground);
         text-transform: uppercase;
         letter-spacing: 1.5px;
 }
@@ -56,7 +56,7 @@
         padding: 12px 0;
         outline: 0;
         border: 1px solid transparent;
-        border-bottom: 1px solid #02e4cd;
+        border-bottom: 1px solid var(--ColorPartBorder);
         border-radius: 0;
         background-position: 100% center;
 }
@@ -90,7 +90,7 @@
         
 }
 .GroupingOnce span{
-        color: #02e4cd;
+        color: var(--Colorbackground);
         padding: 0 10px;
         font-size: 1.4rem;
 }
