--- a/src/styles/Trailer.css
+++ b/src/styles/Trailer.css
@@ -27,7 +27,7 @@
 }
 .PartBannerTrailer .BannerTrailer p{
         font-size: 1.1em;
-        color: #00D4AD;
+        color: var(--Colorbackground);
         font-weight: 300;
         margin: 15px 0 25px;
 }
@@ -35,7 +35,7 @@
         position: relative;
         text-transform: uppercase;
         background: #fff;
-        color: #111;
+        color: var(--ColorPartTitleSubSPAN);
         font-weight: 500;
         letter-spacing: 2px;
         text-decoration: none;
