--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,11 @@
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-display: swap;
 }
+
 :root{
   --backgroundAll:black;
   --backgroundPart:#1c2027;
@@ -18,4 +19,5 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: var(--backgroundPart);
 }
