--- a/src/styles/download.css
+++ b/src/styles/download.css
@@ -69,9 +69,8 @@
         width: 100%;
         height: 100%;
 }
-.video .clipDown.clip16
+.video .clipDown img
 {
-        background-image: url("/img/2.jpg");
         width: 100%;
         height: 100%;
         background-size: cover;
@@ -106,9 +105,12 @@
         object-fit: cover;
         filter: blur(0);
 }
+.classContainerDown{
+        position: relative;
+        margin: 26% 0 0 0;
+}
 .main{
-        margin-top: 52px;
-        background-color: var(--backgroundPart);
+        background-color: rgba(0, 0, 0, 0.708);
         color: var(--Colorbackground);
 }
 .Main-Download{
