--- a/src/components/Right/Serial/Serial.css
+++ b/src/components/Right/Serial/Serial.css
@@ -18,7 +18,7 @@
 }
 .CardSerial img{
         width: 100%;
-        height: 70%;
+        height: 25vh;
 }
 .CardSerial p {
         color: var(--ColorPartTitleSubSPAN);
