--- a/src/styles/Netflex.css
+++ b/src/styles/Netflex.css
@@ -11,20 +11,21 @@
         display: flex;
         align-items: center;
         border-radius: 20px;
+        
 }
 .card img{
         position: absolute;
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
-        height: 100%;
+        height: 90%;
         width: auto;
         transition: 0.5s;
 }
 .card:hover img{
-        left: 80%;
-        height: 120%;
-        width: 100%;
+        left: 75%;
+        height: 100%;
+        width: auto;
 }
 .card .card-content{
         position: relative;
@@ -42,14 +43,14 @@
 .card:hover .card-content{
         opacity: 1;
         visibility: visible;
-        right: 25%;
+        right: 28%;
         text-align: center;
         padding: 10px 0px;
 }
 .card .card-content h2{
         color: #fff;
         text-transform: uppercase;
-        font-size: 2.5em;
+        font-size: 2.3em;
         line-height: 1em;
 }
 .card .card-content p{
@@ -66,39 +67,25 @@
         text-decoration: none;
 }
 
-.fromLeft {
-        animation-name: fromLeft;
-        animation-duration: 3s;
-}
-@keyframes fromLeft {
-        0% {
-        transform: translateX(-70px);
-        opacity: 0;
-        }
-        100% {
-        transform: translateX(0px);
-        opacity: 1;
-        }
-}
-
 /* part 2 end */
 /* main end */
 @media screen and (max-width: 1400px){
         .card img{
-                height: 90%;
-                width: 90%;
+                height: 70%;
+                width: auto;
         }
         .card:hover img{
-                left: 80%;
-                height: 110%;
+                left: 70%;
+                height: 80%;
+                width: auto;
         }
         .card .card-content h2{
-                font-size: 1.8em;
-                line-height: 2em;
+                font-size: 1.7em;
+                line-height: 1.2em;
         }
         .card .card-content p{
                 color: #fff;
-                font-size: 0.9em;
+                font-size: 0.8em;
         }
 }
 @media screen and (max-width: 1154px){
@@ -109,12 +96,12 @@
         }
         .card img{
                 height: 80%;
-                width: 90%;
+                width: auto;
         }
         .card:hover img{
                 left: 75%;
-                height: 90%;
-                width: 90%;
+                height: 85%;
+                width: auto;
         }
 }
 @media screen and (max-width: 860px){
@@ -125,26 +112,26 @@
         }
         .card img{
                 height: 90%;
-                width: 70%;
-        }
-        .card:hover img{
-                left: 80%;
-                height: 110%;
-                width: 70%;
-        }
-}
-@media screen and (max-width: 480px){
-        .card img{
-                height: 85%;
                 width: auto;
         }
         .card:hover img{
                 left: 80%;
-                height: 130%;
+                height: 110%;
+                width: auto;
+        }
+}
+@media screen and (max-width: 480px){
+        .card img{
+                height: 80%;
+                width: auto;
+        }
+        .card:hover img{
+                left: 80%;
+                height: 110%;
         }
         .card .card-content h2{
-                font-size: 1.5em;
-                line-height: 1.3em;
+                font-size: 1.4em;
+                line-height: 1.2em;
         }
         .card .card-content p{
                 color: #fff;
@@ -155,20 +142,25 @@
         }
 }
 @media (max-width:420px){
+        .card img{
+                height: 70%;
+                width: auto;
+        }
         .card .content{
         padding: 30px;
         }
         .card:hover img{
-                height: 120%;
+                height: 100%;
+                left: 75%;
         }
 }
 @media screen and (max-width: 350px){
         .card img{
-                height: 70%;
+                height: 60%;
                 width:auto;
         }
         .card:hover img{
-                left: 80%;
-                height: 110%;
+                left: 70%;
+                height: 80%;
         }
 }
