--- a/src/components/Left/NewSection/Swiper.css
+++ b/src/components/Left/NewSection/Swiper.css
@@ -13,7 +13,7 @@
 }
 .BigSliderShow {
         width: 100%;
-        height: 14%;
+        height: 60vh;
 }
 .BigSliderShow2 {
         text-align: center;
@@ -22,7 +22,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: #20242C;
+        background: #1C2027;
 }
 
 .BigSliderShow2 img {
@@ -47,11 +47,16 @@
 .PartTitle a{
         text-decoration: none ;
 }
+@media screen and (max-width: 1300px){
+        .BigSliderShow {
+                height: 45vh;
+        }
+}
 
 @media screen and (max-width: 991px){
         .BigSliderShow {
                 width: auto;
-                height: 14%;
+                height: 50vh;
         }
         .BigSliderShow2 .title img {
                 height: 100%;
@@ -66,13 +71,13 @@
 @media screen and (max-width: 728px){
         .BigSliderShow {
                 width: auto;
-                height: 11%;
+                height: 50vh;
         }
 }
 @media screen and (max-width: 576px){
         .BigSliderShow {
                 width: 100%;
-                height: 11%;
+                height: 40vh;
         }
         .BigSliderShow2 .title img {
                 height: 100%;
@@ -91,7 +96,7 @@
 @media screen and (max-width: 450px){
         .BigSliderShow {
                 width: 100%;
-                height: 10%;
+                height: 30vh;
         }
         .BigSliderShow2 .title img {
                 height: 100%;
